--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Retrospect by TEMPLATED</title>
+		<title>sharing smiles</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Retrospect</a></h1>
+				<h1><a href="index.html">sharing smiles</a></h1>
 				<a href="#nav">Menu</a>
 			</header>
 
@@ -53,7 +53,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
+						<li><a href="https://www.facebook.com/Sharing-Smiles-880101118743685/timeline/?ref=profile" class="icon fa-facebook">
 							<span class="label">Facebook</span>
 						</a></li>
 						<li><a href="#" class="icon fa-twitter">
