--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Retrospect</a></h1>
+				<h1><a href="index.html">sharing smiles</a></h1>
 				<a href="#nav">Menu</a>
 			</header>
 
